[package]
name = "ipnetx"
version = "0.2.0"
edition = "2024"
description = "ipnetx is the crate for set operations on IP address space — union, intersection, difference, and complement over arbitrary collections of ranges and CIDR prefixes, for both IPv4 and IPv6."
license = "MIT"
repository = "https://github.com/dbrucknr/ipnetx"
readme = "README.md"
keywords = ["ip", "network", "cidr", "ipv4", "ipv6"]
categories = ["network-programming"]
